--- a/src/scss/animations.scss
+++ b/src/scss/animations.scss
@@ -10,3 +10,15 @@
     30% {filter: opacity(1)}
     100% {filter: opacity(1)}
 }
+
+@keyframes fade-in {
+    0% {opacity: 0;}
+    65% {opacity: 0;}
+    100% {opacity: .5;}
+}
+
+@keyframes dot-fade-in {
+    0% {opacity: 0; transform: scale(0.80); width: 40px}
+    25% {opacity: .50; transform: scale(1); width: 20px}
+    100% {opacity: 1;}
+}
