--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -134,7 +134,22 @@ header {
           //****  PAGE 1  ****//
 
 
-
+#video-fullscreen {
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    height: 100%;
+    z-index: 5000;
+    visibility: hidden;
+    opacity: 0;
+    &.fullscreen {
+        visibility: visible;
+        opacity: 1;
+    }
+}
 
 
 
@@ -180,6 +195,9 @@ header {
         background-position-y: 45%;
         transform: scale(.9);
         cursor: pointer;
+        &:hover {
+            transition: all 0.2s;
+        }
         &.ps4 {
             background-image: url('../../Design\ Assets/logo-ps4.svg');
         }
@@ -213,23 +231,26 @@ header {
             transform: translateX(-100vw);
             visibility: hidden;
         }
-        &:before, &:after {
-            content: "";
-            position: absolute;
-            height: 100%;
-            width: 20px;
-            top: 0px;
-            background-image: radial-gradient(circle at center, $red 1px, transparent 3px), radial-gradient(circle at center, $red 1px, transparent 3px);
-            padding: -0.25rem;
-            background-size: 20px 20px;
-            background-position: top center, bottom center;
-            background-repeat: no-repeat;
-        }
-        &:before {
-            left: -1.5rem;
-        }
-        &:after {
-            right: -1.5rem;
+        &.selected {
+            &:before, &:after {
+                animation: dot-fade-in .75s ease-out;
+                content: "";
+                position: absolute;
+                height: 100%;
+                width: 20px;
+                top: 0px;
+                background-image: radial-gradient(circle at center, $red 1px, transparent 3px), radial-gradient(circle at center, $red 1px, transparent 3px);
+                padding: -0.25rem;
+                background-size: 20px 20px;
+                background-position: top center, bottom center;
+                background-repeat: no-repeat;
+            }
+            &:before {
+                left: -1.5rem;
+            }
+            &:after {
+                right: -1.5rem;
+            }
         }
     }
     .platform-animation {
@@ -238,23 +259,44 @@ header {
         height: 0.5rem;
         width: 7rem;
         transform: translateY(-7px) scaleY(.7);
-        overflow: hidden;
+        &.xbox {
+            left: 50%;
+            transform: translateX(-50%) translateY(-7px) scaleY(.7);
+        }
+        &.pc {
+            left: 100%;
+            transform: translateX(-120%) translateY(-7px) scaleY(.7);
+        }
         &:before, &:after {
             content: '';
+            background-position-x: 65%;
             background-image: url('../../Design\ Assets/detail-header-bottom-red.svg');
             background-repeat: no-repeat;
             transform: scaleX(1.5);
             width: 4rem;
             height: 100%;
             position: absolute;
+            opacity: 0;
+            transition: all 200ms cubic-bezier(.8, 0, .8, 1.000);
         }
         &:before {
             transform: rotateY(180deg) translateX(-8%) rotateX(180deg);
-            background-position-x: -19%
         }
         &:after {
             transform: translateX(71%) rotateX(180deg);
-            background-position-x: -20%
+        }
+        &.selected {
+            &:before, &:after {
+                opacity: 1;
+                background-position-x: -19%;
+            }
+        }
+        &.hovered {
+            &:before, &:after {
+                opacity: 1;
+                background-position-x: -19%;
+                transition: all 200ms cubic-bezier(.8, 0, .8, 1.000);
+            }
         }
     }
 }
@@ -341,6 +383,10 @@ header {
     transform-origin: bottom;
     transform: scale(1.05);
     height: 22rem;
+    &.animate-out {
+        left: 100vw;
+        transform: scale(0);
+    }
 }
 
 .hero-text  {
@@ -482,20 +528,21 @@ header {
 
 .next-hero-preview {
     background-image: url('../../Design Assets/hero-2-preview.png');
-    height: 5rem;
+    height: 5.75rem;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    margin-top: -1.25rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     z-index: 101;
-    text-align: center;
-    padding-right: 5rem;
-    font-size: 2rem;
-    position: relative;
+    position: absolute;
+    width: 8rem;
+    left: 50%;
+    transform: translateX(-50%) translateY(-2rem);
     cursor: pointer;
+    transition: all .4s;
+    transform-origin: 18% 0;
+    &.female {
+        background-image: url('../../Design Assets/hero-1-preview.png');
+    }
 }
 
 .scroll-indicator {
@@ -503,12 +550,14 @@ header {
     z-index: 999;
     bottom: 5.2631%;
     left: 50%;
-    transform: translateX(-100%);
+    transform: translateX(-50%);
+    width: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    align-items: center;
     cursor: pointer;
+    padding: 1rem 1rem 0 1rem;
+    box-sizing: border-box;
     transition: all 0.2s;
     &:hover {
         filter: brightness(2.5);
@@ -657,6 +706,8 @@ header {
     height: 20vh;
     overflow: scroll;
     padding-right: .65rem;
+    font-size: 1rem;
+    line-height: 1rem;
     &::-webkit-scrollbar {
         width: 3px;
         height: 0px;
@@ -822,7 +873,6 @@ header {
     z-index: 1;
     box-shadow: inset 0px 0px 20px 0px $red;
     cursor: pointer;
-    transition: all 2s;
     &.v {
         background-image: url('../../Design\ Assets/v-female-dark-background.png');
         filter: brightness(1.125);
@@ -851,9 +901,7 @@ header {
     .expanded-description & {
         transform: translateY(1rem) translateX(-100vw);
     }
-    &:hover {
-        transform: scale(1.02)
-    }
+
 }
 
 .character-preview-overlay {
@@ -1222,6 +1270,10 @@ li.dexter, li.jackie, li.johnny {
 
     .hero {
         height: 29rem;
+        content:url("../../Design\ Assets/hero.png");
+        &.female {
+            content:url("../../Design\ Assets/hero-2.png");
+        }
     }
 
     .trailer-container {
@@ -1238,17 +1290,16 @@ li.dexter, li.jackie, li.johnny {
         bottom: -2rem;
     }
 
-    .next-hero-preview {
-        height: 8rem;
-        margin-top: -2.5rem;
-    }
-
     .platform-select .platform.animation-enter {
         transform: translateX(30vw);
     }
 
     .platform-counter.platform-counter {
         margin-top: 0.25rem;
+    }
+
+    .next-hero-preview {
+        transform: scale(1.5) translateX(-50%) translateY(-2rem);
     }
 
 
@@ -1423,6 +1474,9 @@ li.dexter, li.jackie, li.johnny {
         top: -8rem;
         left: -194px;
         content:url("../../Design\ Assets/hero-fullscreen.png");
+        &.female {
+            content:url("../../Design\ Assets/hero-fullscreen-2.png");
+        }
     }
     
     .trailer-container {
@@ -1534,8 +1588,13 @@ li.dexter, li.jackie, li.johnny {
     .next-hero-preview {
         position: absolute;
         right: 6rem;
+        left: unset;
         bottom: -11rem;
-        transform: scale(2);
+        transform: scale(1.75) translateY(-1.6rem) translateX(-.5rem);
+        &:hover {
+            transition: all 2s;
+            transform: scale(2) translateY(-1.6rem) translateX(-.5rem);
+        }
     }
 
     .hero-divider {
@@ -1567,7 +1626,8 @@ li.dexter, li.jackie, li.johnny {
     header .container-home .hero-counter {
         grid-row: 7;
         grid-column: 2/6;
-        margin-top: 3rem;
+        margin-top: 5rem;
+        overflow: hidden;
         button {
             filter: invert(1);
         }
@@ -2101,8 +2161,11 @@ li.dexter, li.jackie, li.johnny {
     .hero {
         height: 45rem;
         top: -10rem;
-        left: -12rem;
+       // left: -148px;
         content:url("../../Design\ Assets/hero-fullscreen.png");
+        &.female {
+            content:url("../../Design\ Assets/hero-fullscreen-2.png");
+        }
     }
     
     .trailer-container {
@@ -2161,6 +2224,8 @@ li.dexter, li.jackie, li.johnny {
 
     .hero-text {
         &:before {
+            animation: fade-in 4s;
+            transition: opacity 1s;
             content: "Select Platform";
             text-transform: uppercase;
             position: absolute;
@@ -2174,8 +2239,9 @@ li.dexter, li.jackie, li.johnny {
             z-index: 10;
         }
     }
-
+    
     .platform-spacer {
+        animation: fade-in 5s;
         background-color: white;
         height: 1px;
         width: 10px;
@@ -2191,7 +2257,6 @@ li.dexter, li.jackie, li.johnny {
         grid-column: 4 /span 4;
         margin-top: -2rem;
         margin-left: auto;
-        margin-right: -2rem;
         filter: invert(1);
         transform: scale(0.9);
         max-width: 27rem;
@@ -2238,13 +2303,6 @@ li.dexter, li.jackie, li.johnny {
         }
     }
 
-    .next-hero-preview {
-        position: absolute;
-        right: 6rem;
-        bottom: -11rem;
-        transform: scale(2);
-    }
-
     .hero-text {
         font-size: 21rem;
         left: -21rem;
@@ -2284,6 +2342,7 @@ li.dexter, li.jackie, li.johnny {
         grid-row: 7;
         grid-column: 5/6;
         margin-left: -3.5rem;
+        margin-top: 2rem;
         button {
             filter: invert(1);
         }
@@ -2302,5 +2361,12 @@ li.dexter, li.jackie, li.johnny {
 
     .about-hero {
         right: 140px;
+    }
+
+    .next-hero-preview {
+        transform: scale(2) translateY(-1.5rem) translateX(-1.5rem);
+        &:hover {
+            transform: scale(2.25) translateY(-1.5rem) translateX(-1.5rem);
+        }
     }
 }
