--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -872,7 +872,6 @@ header {
     max-width: 15.25rem;
     z-index: 1;
     box-shadow: inset 0px 0px 20px 0px $red;
-    cursor: pointer;
     &.v {
         background-image: url('../../Design\ Assets/v-female-dark-background.png');
         filter: brightness(1.125);
@@ -1077,7 +1076,6 @@ li.dexter, li.jackie, li.johnny {
     background-image: url('../../Design Assets/button-outline-yellow.svg');
     background-repeat: no-repeat;
     background-color: transparent;
-    transform: translateX(-10%) scaleX(1.1);
     background-size: contain;
     border: none;
     outline: none;
@@ -1089,6 +1087,7 @@ li.dexter, li.jackie, li.johnny {
     position: absolute;
     font-size: 0.675rem;
     transform: translateX(-50%) translateY(75%);
+    transition: all 0.2s;
     .expanded-description & {
         display: none;
     }
@@ -1800,6 +1799,10 @@ li.dexter, li.jackie, li.johnny {
         filter: opacity(.4);
     }
 
+    .characters .slideshow li {
+        transition: all .4s cubic-bezier(0.075, 0.82, 0.165, 1), opacity 0;
+    }
+
     .breadcrumbs.animation-enter {
         transform: translateX(0);
     }
@@ -1859,7 +1862,8 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .expanded-description .back-button {
-        grid-row: 7;
+        grid-row: 6;
+        margin-top: 0;
     }
 
     .slide {
@@ -1937,7 +1941,7 @@ li.dexter, li.jackie, li.johnny {
     }
 
     .character-description {
-        margin-top: 0rem;
+        margin-top: -0rem;
         grid-row: 5;
         max-width: 25rem;
         -webkit-line-clamp: 3;
@@ -1945,8 +1949,8 @@ li.dexter, li.jackie, li.johnny {
         word-break: break-word;
         z-index: 10;
         .expanded-description & {
-            margin-top: 10rem;
-            margin-left: -2rem;
+            margin-top: 8rem;
+            margin-left: 18rem;
             max-height: 100%;
             max-width: 35rem;
             overflow: visible;
@@ -2005,12 +2009,16 @@ li.dexter, li.jackie, li.johnny {
             left: 800px;
             transform: translateX(0);
             .character-image, .character-name, .characters-divider, .character-description {
-                transform: translateX(50vw);
+                transform: translateX(60vw);
             }
             .character-preview {
                 box-shadow: none;
             }
         }
+    }
+
+    .character-name {
+        line-height: 3rem;
     }
 
     .character-image {
@@ -2084,6 +2092,7 @@ li.dexter, li.jackie, li.johnny {
         position: relative;
         margin: 0;
         height: 25rem;
+        filter: brightness(1);
         width: 25rem;
         transform: translateY(0);
         .wallpaper-overlay {
@@ -2100,15 +2109,11 @@ li.dexter, li.jackie, li.johnny {
         }
         &.animation-enter {
             transform: translateX(0);
+            filter: brightness(.5);
         }
         .wallpaper-preview {
             clip-path: polygon(2.5% 0, 97.5% 0, 100% 2.5%, 100% 97.5%, 97.5% 100%, 2.5% 100%, 0 97.5%, 0 2.5%);
-            filter: brightness(.5);
-            &.active {
-                filter: brightness(1);
-            }
         }
-
     }
     
     .wallpaper-divider {
@@ -2369,4 +2374,40 @@ li.dexter, li.jackie, li.johnny {
             transform: scale(2.25) translateY(-1.5rem) translateX(-1.5rem);
         }
     }
+
+    li.dexter, li.jackie, li.johnny {
+        h1 {
+            font-size: 2.5rem;
+            margin-top: -2rem;
+            .expanded-description & {
+                margin-left: 21rem;
+                margin-top: 8rem;
+            }
+        }
+        .characters-divider {
+            margin-top: -6rem;
+            .expanded-description & {
+                margin-top: 4rem;
+            }
+        }
+        p {
+            margin-top: 0;
+        }
+    }
+
+    .expanded-description .character-name {
+        margin-left: 21rem;
+        margin-top: 10rem;
+    }
+
+    .expanded-description .character-description {
+        margin-top: 9rem;
+        margin-left: 21rem;
+    }
+
+    .expanded-description .characters-divider {
+        margin-left: 21rem;
+    }
+
+
 }
